--- a/diving-main.html
+++ b/diving-main.html
@@ -90,6 +90,44 @@
             </div>
         </div>
     </header>
+    <div class="popup">
+        <div class="popup__exit">
+            <span class="close__line"></span>
+            <span class="close__line"></span>
+        </div>
+        <div class="popup__block">
+            <div class="popup__block-item">
+                <h1>Что вас интересует?</h1>
+            </div>
+            <div class="popup__block-item">
+                    <ul class="checkbox">
+                        <li class="checkbox__item">
+                            <label for="checkbox1">Обучение дайвингу</label>
+                            <input type="checkbox" class="custom-checkbox" id="checkbox1" name="checkbox1" value="1">
+                        </li>
+                        <li class="checkbox__item">
+                            <label for="checkbox2">Подарочный сертификат</label>
+                            <input type="checkbox" class="custom-checkbox" id="checkbox2" name="checkbox2" value="2">
+                        </li>
+                        <li class="checkbox__item">
+                            <label for="checkbox3">Консультация</label>
+                            <input type="checkbox" class="custom-checkbox" id="checkbox3" name="checkbox3" value="3">
+                        </li>
+                    </ul>
+            </div>
+            <div class="popup__block-item">
+                    <div class="input">
+                        <input type="text" placeholder="Введите ваше имя">
+                        <input type="text" placeholder="Введите ваш email">
+                        <input type="number" placeholder="Введите ваш телефон">
+                    </div>
+            </div>
+            <div class="popup__block-item">
+                <button class="popup__block-item-button">Отправить</button>
+                <p>Спасибо! Мы свяжемся с вами в ближайшее время.</p>
+            </div>
+        </div>
+    </div>
     <main class="main">
         <div class="main__block">
             <div class="main__block-text">
