--- a/diving-main.html
+++ b/diving-main.html
@@ -209,9 +209,9 @@
                     </div>
                 </div>
                 <div class="circle">
-                    <img class="circle-item" src="./MainPage/circle.svg" alt="circle-item"></img>
-                    <img class="circle-item" src="./MainPage/circle.svg" alt="circle-item"></img>
-                    <img class="circle-item" src="./MainPage/circle.svg" alt="circle-item"></img>
+                    <img class="circle-item" src="./MainPage/circle.svg" alt="circle-item">
+                    <img class="circle-item" src="./MainPage/circle.svg" alt="circle-item">
+                    <img class="circle-item" src="./MainPage/circle.svg" alt="circle-item">
                 </div>
                 <button>Просмотреть все отзывы</button>
             </div>
@@ -314,7 +314,7 @@
             <div class="main__block-text">
                 <div class="main__block-text-title">
                     <h3>ССЫЛКИ НА НАШИ СОЦИАЛЬНЫЕ СЕТИ</h3>
-                    <h1>Присоединяйся <span>к нам</spanh1>
+                    <h1>Присоединяйся <span>к нам</span><h1>
                 </div>
                 <div class="main__block-info">
                     <div class="main__block-info__item">
@@ -362,6 +362,7 @@
                             <li><a href="#">Отзывы</a></li>
                             <li><a href="./contacts/contacts.html">Контакты</a></li>
                         </ul>
+					</nav>
                 </div>
                 <div class="footer__block-item-social">
                     <ul>
@@ -372,6 +373,7 @@
                 </div>
                 <div class="footer__block-item-copyright">
                     <p>Все права защищены © 2010-2013<br>Обучение дайвингу в Москве</p>
+                </div>
             </div>
         </div>
     </footer>
