--- a/diving-main.html
+++ b/diving-main.html
@@ -314,7 +314,7 @@
             <div class="main__block-text">
                 <div class="main__block-text-title">
                     <h3>ССЫЛКИ НА НАШИ СОЦИАЛЬНЫЕ СЕТИ</h3>
-                    <h1>Присоединяйся <span>к нам</span><h1>
+                    <h1>Присоединяйся <span>к нам</span></h1>
                 </div>
                 <div class="main__block-info">
                     <div class="main__block-info__item">
